[tool.poetry]
name = "slash-command-bot-dpy-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.2.5"
discord-ext-slash = "^0.5.0"
discord-py-slash-command = "^1.1.0"
asyncrcon = "^1.1.4"
ark-rcon = "0.0.4"
aiorcon = "^0.6.8"
pyttsx3 = "^2.90"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
